--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-steelbrain": "^4.0.2"
   },
   "dependencies": {
-    "mobx": "^3.0.0"
+    "mobx": "^3.0.0",
+    "mobx-utils": "^2.0.1"
   }
 }
